conf/manifest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portainer-ops-main
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portainer-ops-main
  template:
    metadata:
      labels:
        app: portainer-ops-main
    spec:
      containers:
      - name: portainer-ops-main
        image: mauu/gitops-main:v4
        ports:
        - containerPort: 8080
