conf/service.yml

apiVersion: v1
kind: Service
metadata:
  name: portainer-ops-main
spec:
  selector:
    app: portainer-ops-main
  ports:
    - port: 8080
      targetPort: 8080
